# ReactSIP

./: .env.example  .gitignore  ARCHITECTURE.md  ELECTRON_SETUP.md  PUBLISHING_PLAYBOOK.md  README.md  SETUP.md  electron-builder.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
native/sip-agent/: CMakeLists.txt  README.md
native/sip-agent/include/: EngineStubs.h  JsonLineProtocol.h
native/sip-agent/src/: EngineStubs.cpp  JsonLineProtocol.cpp  main.cpp
public/: electron.js  preload.js
scripts/: build-native-sip-agent.ps1  build-pjproject-libs.ps1  faster_whisper_worker.py  setup-pjsip.ps1  sync-native-agent.ps1
src/: App.css  App.jsx
src/components/: ActiveCall.jsx  CallHistory.jsx  Debug.jsx  Dialpad.jsx  IncomingCall.jsx  Settings.jsx  StatusBar.jsx  TranscriptionWindow.jsx
src/context/: SIPContext.jsx
src/hooks/: useAudio.js  useCallTimer.js  useDtmfTone.js  useSIP.js
